// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shop no on Market 1`] = `
<div
  className="shop"
>
  <div>
    Электрозон
     
    2.9
  </div>
</div>
`;

exports[`Shop with all data 1`] = `
<div
  className="shop"
>
  <div
    className="icon"
  />
  <div>
    Яндекс.Маркет
     
    4.3
  </div>
</div>
`;

exports[`Shop with only name 1`] = `
<div
  className="shop"
>
  <div>
    Яндекс.Маркет
     
  </div>
</div>
`;

exports[`Shop with only rating 1`] = `
<div
  className="shop"
>
  <div>
     
    3.5
  </div>
</div>
`;
